# test_project

./: .gitignore  pyproject.toml
etc/: common.env  dev.env  prod.env
src/: settings.py
