[tool.poetry]
name = "test_project"
version = "0.1.0"
description = ""
authors = ["Raman Trunin <truninr@rocketdata.io>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
